fix: change get to post mapping